<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#cce6e6"
        android:orientation="vertical"
        tools:context=".Sons">

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme">

            <include
                layout="@layout/app_bar_main2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


        </android.support.design.widget.AppBarLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/lblSons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lblSons"
            android:textColor="#4F4F4F"
            android:textSize="24sp"
            android:shadowColor="#000"
            android:shadowDx="1"
            android:shadowDy="1"
            android:shadowRadius="1.0"
            android:gravity="center"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_weight="1"
            android:fadeScrollbars="false"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imgFloresta"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/icon_floresta" />

            <ImageView
                android:id="@+id/imgTempestade"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/icon_tempestade" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/lblFloresta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/lblFloresta"
                android:textColor="#000"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/lblTempestade"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/lblTempestade"
                android:textColor="#000"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_weight="1"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imgVentania"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/icon_ventania" />

            <ImageView
                android:id="@+id/imgMar"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/icon_mar" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/lblVentania"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/lblVentania"
                android:textColor="#000"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/lblMar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/lblMar"
                android:textColor="#000"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="2">

            <ImageView
                android:id="@+id/imgAgua"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/icon_gotas" />

            <ImageView
                android:id="@+id/imgRelax"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/icon_relax" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:id="@+id/lblAgua"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/lblAgua"
                android:textColor="#000"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/lblRelax"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/lblRelax"
                android:textColor="#000"
                android:textSize="16sp" />
        </LinearLayout>


    </LinearLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view2"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="#eff2f0"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/nav_header_main"
        app:menu="@menu/activity_main_drawer" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:orientation="vertical"
            android:paddingTop="18dp">

            <ImageView
                android:id="@+id/imgFotoSons"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="25dp"
                android:src="@drawable/avatar2" />

        </LinearLayout>
    </android.support.design.widget.NavigationView>

</android.support.v4.widget.DrawerLayout>